# PDFix

./: .gitignore  README.md  package.json  vitest.config.ts
.github/workflows/: ci.yml
PDFix/: PDFix.sln
PDFix/PDFix/: Form1.Designer.cs  Form1.cs  PDFix.csproj  Program.cs  mainForm.Designer.cs  mainForm.cs  mainForm.resx
src-tauri/: Cargo.toml  build.rs  defaults.json  tauri.conf.json
src-tauri/capabilities/: default.json  viewer.json
src-tauri/examples/: check_fixture.rs  gen_fixture.rs  probe_paths.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: FileDropZone.svelte  utils.test.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
